<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021.   # COMP 4521 #
  ~ # SHEN, Ye #	 20583137	yshenat@connect.ust.hk
  ~ # ZHOU, Ji #	 20583761	jzhoubl@connect.ust.hk
  ~ # WU, Sik Chit #	 20564571	scwuaa@connect.ust.hk
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg4"
    tools:context=".ui.home.BookingActivity">

    <!--    <ScrollView-->
    <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        xmlns:tools="http://schemas.android.com/tools"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:id="@+id/mScrollView"-->
    <!--        android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_date"
                    app:riv_corner_radius="20dp"
                    app:riv_oval="true" />

                <TextView
                    android:id="@+id/mBtnDate"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/today"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/time"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/sort_icon_kao" />

                <TextView
                    android:id="@+id/mBtnFromTime"
                    android:layout_width="220dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/bg"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/from_now_12_00"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/layout_reserve"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="end|center_vertical"
                    android:text="@string/reserve"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRvResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp" />

    </LinearLayout>

    <!--    </ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>